--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>甜點首頁</title>
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/src/output.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./src/output.css">
 </head>
 
 <body>
