--- a/src/product.html
+++ b/src/product.html
@@ -5,31 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>甜點產品頁面</title>
-    <link rel="stylesheet" href="/css/main.css">
-    <link rel="stylesheet" href="/src/output.css">
+    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./src/output.css">
 </head>
 
 <body>
     <div class="container out-container">
         <header class="px-5 md:px-0 header out-frame flex justify-between justify-items-center"></a>
-            <a class="block md:hidden" href=""><img class="nav-left-btn" src="/img/dehaze-24px.png" alt=""></a>
+            <a class="block md:hidden" href=""><img class="nav-left-btn" src="./img/dehaze-24px.png" alt=""></a>
             <div>
-                <a href="/"><img class="header-logo-first hidden md:block" src="/img/logo-all-dark.svg" alt=""></a>
-                <a href="/"><img class="header-logo h-[18px] block md:hidden" src="/img/logotype-sm-dark.svg" alt=""></a>
+                <a href="/"><img class="header-logo-first hidden md:block" src="./img/logo-all-dark.svg" alt=""></a>
+                <a href="/"><img class="header-logo h-[18px] block md:hidden" src="./img/logotype-sm-dark.svg" alt=""></a>
             </div>
             <div class="header-nav-right flex  justify-center justify-items-center ">
                 <ul class="hidden md:flex justify-center justify-items-center text-base leading-10">
-                    <li class=" mr-15 header-li-mr"><a href="/">首頁</a></li>
-                    <li class=" mr-15 header-li-mr"><a href="/src/product.html">甜點</a></li>
-                    <li class=" mr-20 header-li-mr"><a href="/src/login.html">登入</a></li>
+                    <li class=" mr-15 header-li-mr"><a href="./">首頁</a></li>
+                    <li class=" mr-15 header-li-mr"><a href="./src/product.html">甜點</a></li>
+                    <li class=" mr-20 header-li-mr"><a href="./src/login.html">登入</a></li>
                 </ul>
-                <a href="#"><img class="header-shop-logo md:mt-[40%]" src="/img/shopping_cart.png " alt=""></a>
+                <a href="#"><img class="header-shop-logo md:mt-[40%]" src="./img/shopping_cart.png " alt=""></a>
             </div>
         </header>
     </div>
     
     <div class="product-big-img m-auto max-w-[940px] h-[496px]">
-        <img class="max-w-[90px] h-[327px]" src="/img/home_ds_title3.svg" alt="">
+        <img class="max-w-[90px] h-[327px]" src="./img/home_ds_title3.svg" alt="">
     </div>
 
     <div class="bottom-card mb-[10px]">
@@ -47,7 +47,7 @@
                 <div class="bottom-card-right flex flex-1 flex-wrap basis-[620px]">
 
                     <div class="bottom-card-1 min-[940px]:pr-5 relative mb-[20px] m-auto ">
-                        <a href=""><img class="absolute top-[10px] right-[30px]" src="/img/favorite_border.png" alt=""></a>
+                        <a href=""><img class="absolute top-[10px] right-[30px]" src="./img/favorite_border.png" alt=""></a>
                         <p class="left-5 w-[36px] bg-[#3F5D45] text-[#EAF0ED] flex justify-center items-center p-[10px] writing-mode-vertical-rl absolute">本日精選</p>
                         <div class="bottom-card-img1 w-[300px] h-[315px]"></div>
                         <ul class="flex justify-around">
@@ -59,7 +59,7 @@
                     </div>
                     <div class="bottom-card-2 min-[568px]:block relative mb-[20px] m-auto">
                         <div class="bottom-card-img2 w-[300px] h-[315px]"></div>
-                        <a href=""><img class="absolute top-[10px] right-[30px]" src="/img/favorite_border.png" alt=""></a>
+                        <a href=""><img class="absolute top-[10px] right-[30px]" src="./img/favorite_border.png" alt=""></a>
                         <p class="left-5 top-[0px] w-[36px] bg-[#3F5D45] text-[#EAF0ED] flex justify-center items-center p-[10px] writing-mode-vertical-rl absolute">本日精選</p>
                         <ul class="flex justify-around">
                             <li class="text-[#3F5D45] font-[PingFangTC-light] text-xl font-[600]">焦糖馬卡龍</li>
@@ -69,7 +69,7 @@
                             <a href="">加入購物車</a></div>
                     </div>  
                     <div class="bottom-card-3 relative min-[940px]:pr-5 mb-[20px] m-auto">
-                        <a href=""><img class="absolute top-[10px] right-[30px]" src="/img/favorite_border.png" alt=""></a>
+                        <a href=""><img class="absolute top-[10px] right-[30px]" src="./img/favorite_border.png" alt=""></a>
                         <p class="left-5 w-[36px] bg-[#3F5D45] text-[#EAF0ED] flex justify-center items-center p-[10px] writing-mode-vertical-rl absolute">本日精選</p>
                         <div class="bottom-card-img3 w-[300px] h-[315px]"></div>
                         <ul class="flex justify-around">
@@ -81,7 +81,7 @@
                     </div>
                     <div class="bottom-card-4 min-[568px]:block relative mb-[20px] m-auto hidden md:block">
                         <div class="bottom-card-img4 w-[300px] h-[315px]"></div>
-                        <a href=""><img class="absolute top-[10px] right-[30px]" src="/img/favorite_border.png" alt=""></a>
+                        <a href=""><img class="absolute top-[10px] right-[30px]" src="./img/favorite_border.png" alt=""></a>
                         <p class="left-5 top-[0px] w-[36px] bg-[#3F5D45] text-[#EAF0ED] flex justify-center items-center p-[10px] writing-mode-vertical-rl absolute">本日精選</p>
                         <ul class="flex justify-around">
                             <li class="text-[#3F5D45] font-[PingFangTC-light] text-xl font-[600]">焦糖馬卡龍</li>
@@ -91,7 +91,7 @@
                             <a href="">加入購物車</a></div>
                     </div>  
                     <div class="bottom-card-5  min-[940px]:pr-5 relative mb-[20px] m-auto hidden md:block">
-                        <a href=""><img class="absolute top-[10px] right-[30px]" src="/img/favorite_border.png" alt=""></a>
+                        <a href=""><img class="absolute top-[10px] right-[30px]" src="./img/favorite_border.png" alt=""></a>
                         <p class="left-5 w-[36px] bg-[#3F5D45] text-[#EAF0ED] flex justify-center items-center p-[10px] writing-mode-vertical-rl absolute">本日精選</p>
                         <div class="bottom-card-img5 w-[300px] h-[315px]"></div>
                         <ul class="flex justify-around">
@@ -103,7 +103,7 @@
                     </div>
                     <div class="bottom-card-6 min-[568px]:block relative mb-[20px] m-auto hidden md:block">
                         <div class="bottom-card-img6 w-[300px] h-[315px]"></div>
-                        <a href=""><img class="absolute top-[10px] right-[30px]" src="/img/favorite_border.png" alt=""></a>
+                        <a href=""><img class="absolute top-[10px] right-[30px]" src="./img/favorite_border.png" alt=""></a>
                         <p class="left-5 top-[0px] w-[36px] bg-[#3F5D45] text-[#EAF0ED] flex justify-center items-center p-[10px] writing-mode-vertical-rl absolute">本日精選</p>
                         <ul class="flex justify-around">
                             <li class="text-[#3F5D45] font-[PingFangTC-light] text-xl font-[600]">焦糖馬卡龍</li>
@@ -118,11 +118,11 @@
 
     <section class="product-page-footer out-frame mb-[60px]">
         <ul class="flex justify-center md:justify-end">
-            <li class="color-block-arrow product-page-footer-li flex justify-center items-center w-[60px] h-[60px]"><a class="w-[60px] h-[60px] flex justify-center items-center" href="#"><img src="/img/arrow_left.png" alt=""></a></li>
+            <li class="color-block-arrow product-page-footer-li flex justify-center items-center w-[60px] h-[60px]"><a class="w-[60px] h-[60px] flex justify-center items-center" href="#"><img src="./img/arrow_left.png" alt=""></a></li>
             <li class="color-block product-page-footer-li flex justify-center items-center w-[60px] h-[60px] text-[20px] text-[#3F5D45]"><a class="w-[60px] h-[60px] flex justify-center items-center" href="#">1</a></li>
             <li class="color-block product-page-footer-li flex justify-center items-center w-[60px] h-[60px] text-[20px] text-[#3F5D45]"><a class="w-[60px] h-[60px] flex justify-center items-center" href="#">2</a></li>
             <li class="color-block product-page-footer-li flex justify-center items-center w-[60px] h-[60px] text-[20px] text-[#3F5D45]"><a class="w-[60px] h-[60px] flex justify-center items-center" href="#">3</a></li>
-            <li class="color-block-arrow product-page-footer-li flex justify-center items-center w-[60px] h-[60px]"><a class="w-[60px] h-[60px] flex justify-center items-center" href="#"><img src="/img/arrow_right.png" alt=""></a></li>
+            <li class="color-block-arrow product-page-footer-li flex justify-center items-center w-[60px] h-[60px]"><a class="w-[60px] h-[60px] flex justify-center items-center" href="#"><img src="./img/arrow_right.png" alt=""></a></li>
         </ul>   
     </section>
     
@@ -130,15 +130,15 @@
         <div class="footer-head-bg bg-[#3F5D45]">
             <div class="footer-head out-container flex flex-col min-[792px]:flex-row min-[792px]:justify-between items-center h-[186px] min-[792px]:h-[116px]  min-[792px]:px-[80px] min-[792px]:py-[30px]">
                 <div class="footer-head-left flex items-center">
-                    <img class="w-[40px] h-[40px] bg-[#3F5D45]" src="/img/logo-light.svg" alt="">
+                    <img class="w-[40px] h-[40px] bg-[#3F5D45]" src="./img/logo-light.svg" alt="">
                     <h2 class="text-[#EAF0ED] text-[24px] py-[30px] pl-[20px]">訂閱你我的甜蜜郵件</h2>
                 </div>
                 <div class="footer-head-right flex relative">
                             <div class="right-imgbox absolute left-5 top-4">
-                                <img src="/img/mail-24px.png" alt="">
+                                <img src="./img/mail-24px.png" alt="">
                             </div>
                             <input class="max-w-[315px] h-[56px] pl-[60px]" type="text">
-                            <button class="bg-[#FFE180] w-[64px] h-[56px] flex justify-center items-center"><img class="w-[24px] h-[24px]" src="/img/arrow_forward-24px.png" alt=""></button>
+                            <button class="bg-[#FFE180] w-[64px] h-[56px] flex justify-center items-center"><img class="w-[24px] h-[24px]" src="./img/arrow_forward-24px.png" alt=""></button>
                 </div>
             </div>
         </div>
@@ -146,20 +146,20 @@
         <div class="footer-content-bg bg-[#EAF0ED]">
             <div class="footer-content out-container flex-col md:flex-row py-[30px] flex justify-between h-[310px] md:h-[340px]  pl-[15%] md:px-[80px]">
                 <div class="footer-content-left flex flex-col justify-between">
-                    <img  class="w-[171px] h-[26px]"  src="/img/logotype-sm-dark.svg" alt="">
+                    <img  class="w-[171px] h-[26px]"  src="./img/logotype-sm-dark.svg" alt="">
 
 
                     <div class="footer-content-address">
                         <p class="text-[#3F5D45] font-[HelveticaNeue-Regular] font-bold mt-[30px] md:mt-0">07-1234-5678<br>sweetaste@email.com<br>800 高雄市新興區幸福路 520 號</p>
                             <div class="footer-content-imgbox mt-[30px]">
-                                <a href=""><img class="w-[32px] h-[32px] inline-block mr-2" src="/img/ic-line@.svg" alt=""></a>
-                                <a href=""><img class="w-[32px] h-[32px] inline-block" src="/img/ic-facebook.svg" alt=""></a>
+                                <a href=""><img class="w-[32px] h-[32px] inline-block mr-2" src="./img/ic-line@.svg" alt=""></a>
+                                <a href=""><img class="w-[32px] h-[32px] inline-block" src="./img/ic-facebook.svg" alt=""></a>
                             </div>   
                     </div>
                 </div>
 
                 <div class="footer-content-right flex flex-col justify-between">
-                    <img class="w-[59px] h-[217px] self-end hidden md:block" src="/img/lg-footer-slogan.svg" alt="">
+                    <img class="w-[59px] h-[217px] self-end hidden md:block" src="./img/lg-footer-slogan.svg" alt="">
                     <h6 class="text-[#3F5D45] ">© 2018 Sweetaste* All Rights Reserved</h6>
                 </div>
             </div>
