--- a/login.html
+++ b/login.html
@@ -23,8 +23,8 @@
             <div class="header-nav-right flex  justify-center justify-items-center ">
                 <ul class="hidden md:flex justify-center justify-items-center text-base leading-10">
                     <li class=" mr-15 header-li-mr"><a href="./">首頁</a></li>
-                    <li class=" mr-15 header-li-mr"><a href="./src/product.html">甜點</a></li>
-                    <li class=" mr-20 header-li-mr"><a href="./src/login.html">登入</a></li>
+                    <li class=" mr-15 header-li-mr"><a href="./product.html">甜點</a></li>
+                    <li class=" mr-20 header-li-mr"><a href="./login.html">登入</a></li>
                 </ul>
                 <a href="#"><img class="header-shop-logo md:mt-[40%]" src="./img/shopping_cart.png " alt=""></a>
             </div>
