--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <header class="px-5 md:px-0 header out-frame flex justify-between justify-items-center"></a>
             <a class="block md:hidden" href=""><img class="nav-left-btn" src="./img/dehaze-24px.png" alt=""></a>
             <div>
-                <a href="/"><img class="header-logo-first hidden md:block" src="./img/logo-all-dark.svg" alt=""></a>
-                <a href="/"><img class="header-logo h-[18px] block md:hidden" src="./img/logotype-sm-dark.svg" alt=""></a>
+                <a href="./"><img class="header-logo-first hidden md:block" src="./img/logo-all-dark.svg" alt=""></a>
+                <a href="./"><img class="header-logo h-[18px] block md:hidden" src="./img/logotype-sm-dark.svg" alt=""></a>
             </div>
             <div class="header-nav-right flex  justify-center justify-items-center ">
                 <ul class="hidden md:flex justify-center justify-items-center text-base leading-10">
