--- a/login.html
+++ b/login.html
@@ -15,9 +15,9 @@
         <header class="px-5 md:px-0 header out-frame flex justify-between justify-items-center"></a>
             <a class="block md:hidden" href=""><img class="nav-left-btn" src="./img/dehaze-24px.png" alt=""></a>
             <div>
-                <a href="/"><img class="header-logo-first hidden md:block" src="./img/logo-all-dark.svg"
+                <a href="./"><img class="header-logo-first hidden md:block" src="./img/logo-all-dark.svg"
                         alt=""></a>
-                <a href="/"><img class="header-logo h-[18px] block md:hidden"
+                <a href="./"><img class="header-logo h-[18px] block md:hidden"
                         src="./img/logotype-sm-dark.svg" alt=""></a>
             </div>
             <div class="header-nav-right flex  justify-center justify-items-center ">
