--- a/product.html
+++ b/product.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>甜點產品頁面</title>
+    <title>商品頁面</title>
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./src/output.css">
 </head>
@@ -23,7 +23,7 @@
                     <li class=" mr-15 header-li-mr"><a href="./product.html">甜點</a></li>
                     <li class=" mr-20 header-li-mr"><a href="./login.html">登入</a></li>
                 </ul>
-                <a href="#"><img class="header-shop-logo md:mt-[40%]" src="./img/shopping_cart.png " alt=""></a>
+                <a href="./shop.html"><img class="header-shop-logo md:mt-[40%]" src="./img/shopping_cart.png " alt=""></a>
             </div>
         </header>
     </div>
