--- a/shop.html
+++ b/shop.html
@@ -4,10 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>登入頁面</title>
+    <title>購物車</title>
     <link rel="stylesheet" href="./css/main.css">
     <link rel="stylesheet" href="./src/output.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
 </head>
 
 <body>
@@ -26,57 +25,12 @@
                     <li class=" mr-15 header-li-mr"><a href="./product.html">甜點</a></li>
                     <li class=" mr-20 header-li-mr"><a href="./login.html">登入</a></li>
                 </ul>
-                <a href="./shop.html"><img class="header-shop-logo md:mt-[40%]" src="./img/shopping_cart.png " alt=""></a>
+                <a href="#"><img class="header-shop-logo md:mt-[40%]" src="./img/shopping_cart.png " alt=""></a>
             </div>
         </header>
     </div>
 
-    <main class="login-container">
-        <div class="out-container max-w-[100%] flex justify-center py-[60px]">
-            <div class="login-left md:w-[390px]">
-                <h2 class="text-[36px] text-[white] bg-[#3F5D45] text-center pt-[30px] pb-[10px]">會員登入</h2>
-                <ul class="pad-logo-view flex md:hidden justify-center items-center p-[30px] bg-[#EAF0ED]">
-                    <li class="bg-[white] px-4"> <a class="inline-block"> <img class="w-[100%] h-[56px]" src="./img/ic-facebook-logotype.svg" alt=""> </a> </li>
-                    <li class="bg-[white] px-4"> <a class="inline-block"> <img class="w-[100%] h-[56px]" src="./img/ic-google.svg" alt=""> </a> </li>
-                    <li class="bg-[white] px-4"> <a class="inline-block"> <img class="w-[100%] h-[56px]" src="./img/ic-yahoo.svg" alt=""> </a> </li>
-                </ul>
-                <div class="login-form bg-[#3F5D45]">
-                    <div class="login-formInfo p-[30px]">
-                        <div class="login-formInfo_account relative mb-4">
-                            <span class="absolute top-[15px] left-[5px] inline-block w-[24px] material-icons-outlined text-[#3F5D45]">person</span>
-                            <input class="bg-[#EAF0ED] font-[PingFangTC-light] w-[100%] px-[40px] py-[16px] text-[13px]" type="text" placeholder="電子信箱/手機號碼">
-                        </div>
-                        <div class="login-formInfo_password relative mb-4">
-                            <span class="absolute top-[15px] left-[5px] inline-block w-[24px] material-icons-outlined text-[#3F5D45]">vpn_key</span>
-                            <input class="bg-[#EAF0ED] font-[PingFangTC-light] w-[100%] px-[40px] py-[16px] text-[13px]" type="text" placeholder="請輸入使用者密碼">
-                        </div>
-                        <div class="login-formInfo_checkbox flex items-center">
-                            <input class="w-4 h-4 mr-2" type="checkbox" id="remember_me">
-                            <label class="text-[white]" for="remember_me">記住我</label>
-                        </div>
-                    </div>
-                    <button class="w-[100%] text-center text-2xl py-4 text-[#3F5D45] bg-[#FFE180]">登入帳號</button>
-                </div>
-            </div>
-
-
-            <div class="login-right  w-[390px] hidden md:block py-[15px]">
-                <div class="login-right-linkView bg-[#EAF0ED] px-[30px] h-[100%]">
-                    <h2 class="pt-[40px] text-[24px] font-[PingFangTC-light] text-[#8DA291] text-center">—— 連結社群帳號 ——</h2>
-                    <ul class="mt-[36px]">
-                        <li class="bg-[white] mb-4"><a class="flex justify-center w-[100%] text-center py-[16px]" href=""><img class="h-[20px]" src="./img/ic-facebook-logotype.svg" alt=""></a></li>
-                        <li class="bg-[white] mb-4"><a class="flex justify-center w-[100%] text-center py-[16px]" href=""><img class="h-[20px]" src="./img/ic-google.svg" alt=""></a></li>
-                        <li class="bg-[white] mb-4"><a class="flex justify-center w-[100%] text-center py-[16px]" href=""><img class="h-[20px]" src="./img/ic-yahoo.svg" alt=""></a></li>
-                    </ul>
-                </div>
-            </div>
-    </main>
-
-
-
-
-
-
+    
 
 
 
