--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </ul>
                 <div
                     class="bottom-card-footer flex justify-center items-center h-[65px] bg-[#EAF0ED] text-[24px] text-[#3F5D45]">
-                    <a href="">加入購物車</a></div>
+                    <a class="flex justify-center items-center w-[100%] h-[100%]" href="">加入購物車</a></div>
             </div>
             <div class="bottom-card-2 min-[568px]:pr-5 hidden min-[568px]:block relative">
                 <div class="bottom-card-img2 w-[300px] h-[315px]"></div>
@@ -94,7 +94,7 @@
                 </ul>
                 <div
                     class="bottom-card-footer flex justify-center items-center h-[65px] bg-[#EAF0ED] text-[24px] text-[#3F5D45]">
-                    <a href="">加入購物車</a></div>
+                    <a class="flex justify-center items-center w-[100%] h-[100%]" href="">加入購物車</a></div>
             </div>
             <div class="bottom-card-3 hidden min-[940px]:block relative">
                 <div class="bottom-card-img3 w-[300px] h-[315px]"></div>
@@ -106,7 +106,7 @@
                 </ul>
                 <div
                     class="bottom-card-footer flex justify-center items-center h-[65px] bg-[#EAF0ED] text-[24px] text-[#3F5D45]">
-                    <a href="">加入購物車</a></div>
+                    <a class="flex justify-center items-center w-[100%] h-[100%]" href="">加入購物車</a></div>
             </div>            
         </div>
     </div>
