--- a/product.html
+++ b/product.html
@@ -47,7 +47,7 @@
                 <div class="bottom-card-right flex flex-1 flex-wrap basis-[620px]">
 
                     <div class="bottom-card-1 min-[940px]:pr-5 relative mb-[20px] m-auto ">
-                        <a href=""><img class="absolute top-[10px] right-[30px]" src="./img/favorite_border.png" alt=""></a>
+                        <a href=""><img class="absolute top-[10px] min-[940px]:right-[50px] right-[30px]" src="./img/favorite_border.png" alt=""></a>
                         <p class="left-5 w-[36px] bg-[#3F5D45] text-[#EAF0ED] flex justify-center items-center p-[10px] writing-mode-vertical-rl absolute">本日精選</p>
                         <div class="bottom-card-img1 w-[300px] h-[315px]"></div>
                         <ul class="flex justify-around">
@@ -55,7 +55,7 @@
                             <li class="text-[#3F5D45] text-xl font-[600]">NT$450</li>
                         </ul>
                         <div class="bottom-card-footer flex justify-center items-center h-[65px] bg-[#EAF0ED] text-[24px] text-[#3F5D45]">
-                            <a href="">加入購物車</a></div>
+                            <a class="flex justify-center items-center w-[100%] h-[100%]" href="">加入購物車</a></div>
                     </div>
                     <div class="bottom-card-2 min-[568px]:block relative mb-[20px] m-auto">
                         <div class="bottom-card-img2 w-[300px] h-[315px]"></div>
@@ -66,10 +66,10 @@
                             <li class="text-[#3F5D45] text-xl font-[600]">NT$450</li>
                         </ul>
                         <div class="bottom-card-footer flex justify-center items-center h-[65px] bg-[#EAF0ED] text-[24px] text-[#3F5D45]">
-                            <a href="">加入購物車</a></div>
+                            <a class="flex justify-center items-center w-[100%] h-[100%]" href="">加入購物車</a></div>
                     </div>  
                     <div class="bottom-card-3 relative min-[940px]:pr-5 mb-[20px] m-auto">
-                        <a href=""><img class="absolute top-[10px] right-[30px]" src="./img/favorite_border.png" alt=""></a>
+                        <a href=""><img class="absolute top-[10px] min-[940px]:right-[50px] right-[30px]" src="./img/favorite_border.png" alt=""></a>
                         <p class="left-5 w-[36px] bg-[#3F5D45] text-[#EAF0ED] flex justify-center items-center p-[10px] writing-mode-vertical-rl absolute">本日精選</p>
                         <div class="bottom-card-img3 w-[300px] h-[315px]"></div>
                         <ul class="flex justify-around">
@@ -77,7 +77,7 @@
                             <li class="text-[#3F5D45] text-xl font-[600]">NT$450</li>
                         </ul>
                         <div class="bottom-card-footer flex justify-center items-center h-[65px] bg-[#EAF0ED] text-[24px] text-[#3F5D45]">
-                            <a href="">加入購物車</a></div>
+                            <a class="flex justify-center items-center w-[100%] h-[100%]" href="">加入購物車</a></div>
                     </div>
                     <div class="bottom-card-4 min-[568px]:block relative mb-[20px] m-auto hidden md:block">
                         <div class="bottom-card-img4 w-[300px] h-[315px]"></div>
@@ -88,10 +88,10 @@
                             <li class="text-[#3F5D45] text-xl font-[600]">NT$450</li>
                         </ul>
                         <div class="bottom-card-footer flex justify-center items-center h-[65px] bg-[#EAF0ED] text-[24px] text-[#3F5D45]">
-                            <a href="">加入購物車</a></div>
+                            <a class="flex justify-center items-center w-[100%] h-[100%]" href="">加入購物車</a></div>
                     </div>  
                     <div class="bottom-card-5  min-[940px]:pr-5 relative mb-[20px] m-auto hidden md:block">
-                        <a href=""><img class="absolute top-[10px] right-[30px]" src="./img/favorite_border.png" alt=""></a>
+                        <a href=""><img class="absolute top-[10px] min-[940px]:right-[50px] right-[30px]" src="./img/favorite_border.png" alt=""></a>
                         <p class="left-5 w-[36px] bg-[#3F5D45] text-[#EAF0ED] flex justify-center items-center p-[10px] writing-mode-vertical-rl absolute">本日精選</p>
                         <div class="bottom-card-img5 w-[300px] h-[315px]"></div>
                         <ul class="flex justify-around">
@@ -99,7 +99,7 @@
                             <li class="text-[#3F5D45] text-xl font-[600]">NT$450</li>
                         </ul>
                         <div class="bottom-card-footer flex justify-center items-center h-[65px] bg-[#EAF0ED] text-[24px] text-[#3F5D45]">
-                            <a href="">加入購物車</a></div>
+                            <a class="flex justify-center items-center w-[100%] h-[100%]" href="">加入購物車</a></div>
                     </div>
                     <div class="bottom-card-6 min-[568px]:block relative mb-[20px] m-auto hidden md:block">
                         <div class="bottom-card-img6 w-[300px] h-[315px]"></div>
@@ -110,7 +110,7 @@
                             <li class="text-[#3F5D45] text-xl font-[600]">NT$450</li>
                         </ul>
                         <div class="bottom-card-footer flex justify-center items-center h-[65px] bg-[#EAF0ED] text-[24px] text-[#3F5D45]">
-                            <a href="">加入購物車</a></div>
+                            <a class="flex justify-center items-center w-[100%] h-[100%]" href="">加入購物車</a></div>
                     </div>  
                 </div>     
         </div>
@@ -118,11 +118,11 @@
 
     <section class="product-page-footer out-frame mb-[60px]">
         <ul class="flex justify-center md:justify-end">
-            <li class="color-block-arrow product-page-footer-li flex justify-center items-center w-[60px] h-[60px]"><a class="w-[60px] h-[60px] flex justify-center items-center" href="#"><img src="./img/arrow_left.png" alt=""></a></li>
-            <li class="color-block product-page-footer-li flex justify-center items-center w-[60px] h-[60px] text-[20px] text-[#3F5D45]"><a class="w-[60px] h-[60px] flex justify-center items-center" href="#">1</a></li>
-            <li class="color-block product-page-footer-li flex justify-center items-center w-[60px] h-[60px] text-[20px] text-[#3F5D45]"><a class="w-[60px] h-[60px] flex justify-center items-center" href="#">2</a></li>
-            <li class="color-block product-page-footer-li flex justify-center items-center w-[60px] h-[60px] text-[20px] text-[#3F5D45]"><a class="w-[60px] h-[60px] flex justify-center items-center" href="#">3</a></li>
-            <li class="color-block-arrow product-page-footer-li flex justify-center items-center w-[60px] h-[60px]"><a class="w-[60px] h-[60px] flex justify-center items-center" href="#"><img src="./img/arrow_right.png" alt=""></a></li>
+            <li class="color-block-arrow product-page-footer-li_Arrow flex justify-center items-center w-[60px] h-[60px]"><a class="w-[60px] h-[60px] flex justify-center items-center" href="#"><img src="./img/arrow_left.png" alt=""></a></li>
+            <li class="color-block product-page-footer-li_Num flex justify-center items-center w-[60px] h-[60px] text-[20px] text-[#3F5D45]"><a class="w-[60px] h-[60px] flex justify-center items-center" href="#">1</a></li>
+            <li class="color-block product-page-footer-li_Num flex justify-center items-center w-[60px] h-[60px] text-[20px] text-[#3F5D45]"><a class="w-[60px] h-[60px] flex justify-center items-center" href="#">2</a></li>
+            <li class="color-block product-page-footer-li_Num flex justify-center items-center w-[60px] h-[60px] text-[20px] text-[#3F5D45]"><a class="w-[60px] h-[60px] flex justify-center items-center" href="#">3</a></li>
+            <li class="color-block-arrow product-page-footer-li_Arrow flex justify-center items-center w-[60px] h-[60px]"><a class="w-[60px] h-[60px] flex justify-center items-center" href="#"><img src="./img/arrow_right.png" alt=""></a></li>
         </ul>   
     </section>
     
