--- a/shop.html
+++ b/shop.html
@@ -31,7 +31,60 @@
     </div>
 
     
+    <main class="out-frame">
+        <section class="cart_Detail">
+            <h2 class="py-[16px] text-[24px] text-[#3F5D45] text-center bg-[#EAF0ED]">您的購物車</h2>
+            <ul class="p-[30px] flex flex-col gap-y-[30px]">
+                <li class="cart_Detail_list flex flex-wrap gap-x-4 pb-[10px]">
+                    <div class="cartLIstItem_header w-[157px] h-[106px] md:h-[110px] md:w-[110px]"><img class="w-[100%] h-[100%] object-cover" src="https://images.unsplash.com/photo-1504855328839-2f4baf9e0fd7?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=db0c8e5539456faeca0e49c79e2ccb16&auto=format&fit=crop&w=800&q=60" alt=""></div>
+                    <div class="cartLIstItem_body flex-1 flex flex-col flex-wrap">
+                        <div class="cartLIstItem_body_text text-[#3F5D45]">
+                            <p class="font-[PingFangTC-light] font-[600] text-[20px]">焦糖馬卡龍</p>
+                            <p class="font-[PingFangTC-light] font-[600] text-[16px]">NT$ 450</p>
+                        </div>
+                        <div class="cartLIstItem_body_button flex mt-auto">
+                            <button class="btn-reduce w-[48px] h-[48px]">-</button>
+                            <p class="flex justify-center items-center w-[48px] h-[48px]">2</p>
+                            <button class="btn-add w-[48px] h-[48px]">+</button>
+                        </div>
+                    </div>
+                    <div class="cartLIstItem_footer"></div>
+                </li>
+                <li class="cart_Detail_list flex flex-wrap gap-x-4 pb-[10px]">
+                    <div class="cartLIstItem_header w-[157px] h-[106px] md:h-[110px] md:w-[110px]"><img class="w-[100%] h-[100%] object-cover" src="./img/p-5.png" alt=""></div>
+                    <div class="cartLIstItem_body flex-1 flex flex-col flex-wrap">
+                        <div class="cartLIstItem_body_text text-[#3F5D45]">
+                            <p class="font-[PingFangTC-light] font-[600] text-[20px]">焦糖馬卡龍</p>
+                            <p class="font-[PingFangTC-light] font-[600] text-[16px]">NT$ 450</p>
+                        </div>
+                        <div class="cartLIstItem_body_button flex mt-auto">
+                            <button class="btn-reduce w-[48px] h-[48px]">-</button>
+                            <p class="flex justify-center items-center w-[48px] h-[48px]">2</p>
+                            <button class="btn-add w-[48px] h-[48px]">+</button>
+                        </div>
+                    </div>
+                    <div class="cartLIstItem_footer"></div>
+                </li>
+                <li class="cart_Detail_list flex flex-wrap gap-x-4 pb-[10px]">
+                    <div class="cartLIstItem_header w-[157px] h-[106px] md:h-[110px] md:w-[110px]"><img class="w-[100%] h-[100%] object-cover" src="./img/p-3.png" alt=""></div>
+                    <div class="cartLIstItem_body flex-1 flex flex-col flex-wrap">
+                        <div class="cartLIstItem_body_text text-[#3F5D45]">
+                            <p class="font-[PingFangTC-light] font-[600] text-[20px]">焦糖馬卡龍</p>
+                            <p class="font-[PingFangTC-light] font-[600] text-[16px]">NT$ 450</p>
+                        </div>
+                        <div class="cartLIstItem_body_button flex mt-auto">
+                            <button class="btn-reduce w-[48px] h-[48px]">-</button>
+                            <p class="flex justify-center items-center w-[48px] h-[48px]">2</p>
+                            <button class="btn-add w-[48px] h-[48px]">+</button>
+                        </div>
+                    </div>
+                    <div class="cartLIstItem_footer"></div>
+                </li>
+            </ul>
+        </section>
 
+        <section class="cart_Item"></section>
+    </main>
 
 
     <footer class="">
