--- a/shop.html
+++ b/shop.html
@@ -25,7 +25,7 @@
                     <li class=" mr-15 header-li-mr"><a href="./product.html">甜點</a></li>
                     <li class=" mr-20 header-li-mr"><a href="./login.html">登入</a></li>
                 </ul>
-                <a href="#"><img class="header-shop-logo md:mt-[40%]" src="./img/shopping_cart.png " alt=""></a>
+                <a href="./shop.html"><img class="header-shop-logo md:mt-[40%]" src="./img/shopping_cart.png " alt=""></a>
             </div>
         </header>
     </div>
@@ -184,7 +184,7 @@
     const checkoutBtn = document.querySelector('.checkout-btn')
 
     checkoutBtn.addEventListener('click', function () {
-        location.href = "./index.html";
+        location.href = "./transport.html";
     })
 </script>
 
